Updated Libft to be up-to-date with my dedicated repo
Might want Libft to be a link to the repo.

--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -1,70 +1,125 @@
-CC = cc
-CFLAGS = -Wall -Wextra -Werror
+############
+## COLORS ##
+############
 
-NAME = libft.a
-SRC_FILES =		ft_isalpha.c \
-				ft_isdigit.c \
-				ft_isalnum.c \
-				ft_isascii.c \
-				ft_isprint.c \
-				ft_strlen.c \
-				ft_memset.c \
-				ft_bzero.c \
-				ft_memcpy.c \
-				ft_memmove.c \
-				ft_strlcpy.c \
-				ft_strlcat.c \
-				ft_toupper.c \
-				ft_tolower.c \
-				ft_strchr.c \
-				ft_strrchr.c \
-				ft_strncmp.c \
-				ft_memchr.c \
-				ft_memcmp.c \
-				ft_strnstr.c \
-				ft_atoi.c \
-				ft_calloc.c \
-				ft_strdup.c \
-				ft_substr.c \
-				ft_strjoin.c \
-				ft_strtrim.c \
-				ft_split.c \
-				ft_itoa.c \
-				ft_strmapi.c \
-				ft_striteri.c \
-				ft_putchar_fd.c \
-				ft_putstr_fd.c \
-				ft_putendl_fd.c \
-				ft_putnbr_fd.c
+DEF_COLOR = \033[0;39m
+GRAY = \033[0;90m
+RED = \033[0;91m
+GREEN = \033[0;92m
+YELLOW = \033[0;93m
+BLUE = \033[0;94m
+MAGENTA = \033[0;95m
+CYAN = \033[0;96m
+WHITE = \033[0;97m
 
-OBJ_FILES = $(SRC_FILES:.c=.o)
+###############
+## VARIABLES ##
+###############
 
-BONUS_FILES =	ft_lstnew_bonus.c \
-				ft_lstadd_front_bonus.c \
-				ft_lstsize_bonus.c \
-				ft_lstlast_bonus.c \
-				ft_lstadd_back_bonus.c \
-				ft_lstdelone_bonus.c \
-				ft_lstclear_bonus.c \
-				ft_lstiter_bonus.c \
-				ft_lstmap_bonus.c
+NAME	= libft.a
+CC		= gcc
+CFLAGS	= -Wall -Wextra -Werror
+INCLUDE	= include
+SRC_DIR	= src/
+OBJ_DIR	= obj/
+RM		= rm -f
+AR		= ar rcs
 
-BONUS_OBJ = $(BONUS_FILES:.c=.o)
+#############
+## SOURCES ##
+#############
+
+SRC_FILES =		ft_is/ft_isalnum \
+				ft_is/ft_isalpha \
+				ft_is/ft_isascii \
+				ft_is/ft_isdigit \
+				ft_is/ft_isprint \
+				ft_mem/ft_memchr \
+				ft_mem/ft_memcmp \
+				ft_mem/ft_memcpy \
+				ft_mem/ft_memmove \
+				ft_mem/ft_memset \
+				ft_put/ft_putchar_fd \
+				ft_put/ft_putendl_fd \
+				ft_put/ft_putnbr_fd \
+				ft_put/ft_putstr_fd \
+				ft_str/ft_strchr \
+				ft_str/ft_strdup \
+				ft_str/ft_striteri \
+				ft_str/ft_strjoin \
+				ft_str/ft_strlcat \
+				ft_str/ft_strlcpy \
+				ft_str/ft_strlen \
+				ft_str/ft_strmapi \
+				ft_str/ft_strncmp \
+				ft_str/ft_strnstr \
+				ft_str/ft_strrchr \
+				ft_str/ft_strtrim \
+				ft_str/ft_substr \
+				ft_to/ft_tolower \
+				ft_to/ft_toupper \
+				ft_atoi \
+				ft_bzero \
+				ft_calloc \
+				ft_itoa \
+				ft_split
+
+SRC		= $(addprefix $(SRC_DIR), $(addsuffix .c, $(SRC_FILES)))
+OBJ		= $(addprefix $(OBJ_DIR), $(addsuffix .o, $(SRC_FILES)))
+
+OBJF	= .cache_exists
+
+###########
+## BONUS ##
+###########
+
+BONUS_FILES =	ft_lst/ft_lstadd_back_bonus \
+				ft_lst/ft_lstadd_front_bonus \
+				ft_lst/ft_lstclear_bonus \
+				ft_lst/ft_lstdelone_bonus \
+				ft_lst/ft_lstiter_bonus \
+				ft_lst/ft_lstlast_bonus \
+				ft_lst/ft_lstmap_bonus \
+				ft_lst/ft_lstnew_bonus \
+				ft_lst/ft_lstsize_bonus
+
+BONUS_SRC	= $(addprefix $(SRC_DIR), $(addsuffix .c, $(BONUS_FILES)))
+BONUS_OBJ	= $(addprefix $(OBJ_DIR), $(addsuffix .o, $(BONUS_FILES)))
+
+#############
+## RECIPES ##
+#############
 
 all: $(NAME)
 
-$(NAME): $(OBJ_FILES)
-	ar rcs $(NAME) $(OBJ_FILES)
+$(NAME): $(OBJF) $(OBJ)
+	@$(AR) $(NAME) $(OBJ)
+	@echo "$(GREEN)$(NAME) compiled!$(DEF_COLOR)"
 
-bonus: all $(OBJ_FILES) $(BONUS_OBJ)
-	ar rcs $(NAME) $(BONUS_OBJ)
+$(OBJ_DIR)%.o: $(SRC_DIR)%.c | $(OBJF)
+	@echo "$(YELLOW)Compiling $<$(DEF_COLOR)"
+	@$(CC) $(CFLAGS) -I $(INCLUDE) -c $< -o $@
+
+$(OBJF):
+	@mkdir -p $(OBJ_DIR)
+	@mkdir -p $(addprefix $(OBJ_DIR), $(dir $(SRC_FILES)))
+	@mkdir -p $(addprefix $(OBJ_DIR), $(dir $(BONUS_FILES)))
+	@touch $(OBJF)
+	@echo "$(GREEN)Object directory created!$(DEF_COLOR)"
+
+bonus: all $(OBJ) $(BONUS_OBJ)
+	@$(AR) $(NAME) $(BONUS_OBJ)
+	@echo "$(GREEN)$(NAME) compiled with bonus!$(DEF_COLOR)"
 
 clean: 
-	rm -f $(OBJ_FILES) $(BONUS_OBJ)
+	@$(RM) $(OBJ) $(BONUS_OBJ) $(OBJF)
+	@$(RM) -r $(OBJ_DIR)
+	@echo "$(RED)Objects removed!$(DEF_COLOR)"
 
 fclean: clean 
-	rm -f $(NAME)
+	@$(RM) $(NAME)
+	@echo "$(RED)$(NAME) removed!$(DEF_COLOR)"
 
 re: fclean all
 	
-.PHONY: all clean fclean re bonus
+.PHONY: all bonus clean fclean re
