moved ft_itoa.c to ./ft_to/

--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -57,11 +57,11 @@ SRC_FILES =		ft_is/ft_isalnum \
 				ft_str/ft_strtrim \
 				ft_str/ft_substr \
 				ft_to/ft_atoi \
+				ft_to/ft_itoa \
 				ft_to/ft_tolower \
 				ft_to/ft_toupper \
 				ft_bzero \
 				ft_calloc \
-				ft_itoa \
 				ft_split
 
 SRC		= $(addprefix $(SRC_DIR), $(addsuffix .c, $(SRC_FILES)))
