--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -66,6 +66,7 @@ SRC_FILES =		ft_is/ft_isalnum \
 				ft_put/ft_putnbr_fd \
 				ft_put/ft_putstr_fd \
 				ft_str/ft_strchr \
+				ft_str/ft_strcmp \
 				ft_str/ft_strdup \
 				ft_str/ft_striteri \
 				ft_str/ft_strjoin \
