Update + added ft_strnapp()

--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -66,7 +66,8 @@ SRC_FILES =		ft_is/ft_isalnum \
 				ft_put/ft_putendl_fd \
 				ft_put/ft_putnbr_fd \
 				ft_put/ft_putstr_fd \
-				ft_str/ft_str_append \
+				ft_str/ft_strapp \
+				ft_str/ft_strnapp \
 				ft_str/ft_strcat \
 				ft_str/ft_strchr \
 				ft_str/ft_strcmp \
