--- a/Libft/Makefile
+++ b/Libft/Makefile
@@ -12,7 +12,7 @@ NAME	= libft.a
 ######################
 
 CC		= gcc
-FLAGS	= -Wall -Wextra -Werror -fPIE
+FLAGS	= -Wall -Wextra -Werror -Wpedantic -fPIE
 DEBUG	= -g3
 FLAGS	+= $(DEBUG)
 DFLAGS	= -MMD -MP
